--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Search
     <table align="center" style="width: 250px;">
         <tr>
             <td style="width: 350px;" align="right">
-                <input type="text" class="form-control" id="api-search" style="width: 250px" onfocus="search(); return false;">
+                <input type="text" class="form-control" id="api-search" style="width: 250px">
             </td>
             <td style="width: 50px;" align="center">
                 <input type="text" class="form-control" id="api-limit" style="width: 50px" value="10">
